--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <div id="blah"></div>
-  <script>$('#blah').html(window.location.href)</script>
+  <script>$('#blah').html(''+window.location.href+'')</script>
 </body>
 </html>
